compiler/actonc/test/typeerrors/funargs5.act
def f(x,y,*z,w):
    return x

a = f(3,4,5,6)
